WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146075
[EFL] test_ewk2_context_url_scheme_register has been crashed since
r185553
https://bugs.webkit.org/show_bug.cgi?id=146075
Summary
[EFL] test_ewk2_context_url_scheme_register has been crashed since r185553
Ryuan Choi
Reported
2015-06-17 13:19:38 PDT
Since
r185553
, CustomProtocolManager sends StartLoading with request of SoupGenericRequest instead of request itself. But, EFL port does not set m_initiatingPageID via InjectedBundle, so updateSoupRequest did not update request of SoupGenericRequest via webkitSoupRequestGenericSetRequest.
Attachments
one suggestion
(2.43 KB, patch)
2015-06-17 14:16 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2015-06-17 14:16:50 PDT
Created
attachment 255036
[details]
one suggestion
Carlos Garcia Campos
Comment 2
2015-06-17 22:51:59 PDT
Comment on
attachment 255036
[details]
one suggestion View in context:
https://bugs.webkit.org/attachment.cgi?id=255036&action=review
> Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:-127 > - if (!m_initiatingPageID) > - return;
Ah, sorry, I didn't notice this early return.
> Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:130 > + if (m_initiatingPageID) { > + uint64_t* initiatingPageIDPtr = static_cast<uint64_t*>(fastMalloc(sizeof(uint64_t))); > + *initiatingPageIDPtr = m_initiatingPageID; > + g_object_set_data_full(G_OBJECT(soupRequest), g_intern_static_string(gSoupRequestInitiatingPageIDKey), initiatingPageIDPtr, fastFree); > + }
This correct.
Ryuan Choi
Comment 3
2015-06-17 23:30:49 PDT
Comment on
attachment 255036
[details]
one suggestion Clearing flags on attachment: 255036 Committed
r185693
: <
http://trac.webkit.org/changeset/185693
>
Ryuan Choi
Comment 4
2015-06-17 23:31:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug