[EFL] test_ewk2_context_url_scheme_register has been crashed since r185553 https://bugs.webkit.org/show_bug.cgi?id=146075

Reviewed by Carlos Garcia Campos.

Since r185553, CustomProtocolManager sends StartLoading message to UIProcess
with request of SoupGenericRequest instead of request itself.
But, request of SoupGenericRequest is nullptr in EFL port because EFL port
does not use m_initiatingPageID.

This patch updates request of SoupGenericRequest although m_initiatingPageID is null.

* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::updateSoupRequest):

Canonical link: https://commits.webkit.org/164141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185693 268f45cc-cd09-0410-ab3c-d52691b4dbfc